# midi-ports

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CustomEditor.h  Main.cpp  MidiPortsController.h  PluginProcessor.h
